--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -1,32 +1,9 @@
 .hero {
-  height: 57vw;
+  width: 100%;
 }
 
 .hero__video {
-  width: 50%;
-  height: 50%;
-  object-fit: fill;
-}
-
-.hero__video:focus {
-  outline-width: 0;
-}
-
-@media only screen and (min-width: 768px) {
-  .hero {
-    height: 25rem;
-    background-color: black;
-    text-align: center;
-  }
-  .hero__video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-}
-
-@media only screen and (min-width: 1279px) {
-  .hero__video {
-    width: 100%;
-  }
+  width: 100%;
+  max-height: 80vh;
+  background-color: #000000;
 }
